# drmaa_executor_plugin

./: README.md  __init__.py  config_adapters.py  drmaa_patches.py  requirements.txt  setup.cfg  setup.py  stores.py
drmaa_executor_plugin/: config_adapters.py  stores.py
drmaa_executor_plugin/executors/: __init__.py  drmaa_executor.py
drmaa_executor_plugin/executors/tests/: test_drmaa_executor.py
drmaa_executor_plugin/tests/: test_config_adapters.py
executors/: drmaa_executor.py
