[metadata]
name = drmaa_executor_plugin
description = Implementation of DRMAA Clusters as Airflow Workers
long_description = file:README.md
keywords = drmaa, hpc, airflow
classifiers =
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
project_urls =
	GitHub = https://github.com/tigrlab/drmaa_executor_plugin
	Bug TRACKER = https://github.com/tigrlab/drmaa_executor_plugin/issues
	Source Code = https://github.com/tigrlab/drmaa_executor_plugin

[options]
python_requires = >= 3.7
install_requires =
	apache-airflow >= 2.1.4
	drmaa==0.7.9
	typing_extensions==4.1.1

packages = find:
zip_safe = true
